--- a/mystyle.css
+++ b/mystyle.css
@@ -7,13 +7,14 @@ body {
     background-image: url('https://img.freepik.com/free-photo/flat-lay-desktop-concept-with-copy-space_23-2148226868.jpg');
     background-repeat: no-repeat;
     background-size: cover;
-    /* background-color: lightcoral; */
+    background-attachment: fixed;
     margin: 0;
     padding: 0;
+    min-height: 100vh;
 }
 
 .nav {
-    background-color: black;
+    background-color: rgba(0, 0, 0, 0.8);
     height: 50px;
     display: flex;
     align-items: center;
@@ -63,7 +64,7 @@ h2 {
     padding: 10px 20px;
     margin: 10px 0;
 }
+
 h3 {
     font-size: 20px;
 }
-
