--- a/mystyle.css
+++ b/mystyle.css
@@ -1,5 +1,5 @@
 * {
-    font-size: 20vw;
+    font-size: 20px;
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
 
@@ -43,7 +43,7 @@ body {
 }
 
 h1 {
-    font-size: 36vw;
+    font-size: 36px;
     margin-bottom: 20px;
 }
 
@@ -66,5 +66,5 @@ h2 {
 }
 
 h3 {
-    font-size: 20vw;
+    font-size: 20px;
 }
